# znany_lekarz_scheduler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  config.example.toml  docker-compose.yml  pyproject.toml
docs/: docker-permissions.md  gmail-apprise-setup.md  playwright-docker-nonroot.md  ream.txt  vps-login-setup.md  vps-uv-run.md
html/: strona_lekarza.txt  strona_lekarza2.txt
scripts/: vps-setup.sh
src/znany_lekarz_scheduler/: main.py
src/znany_lekarz_scheduler/browser/: anti_detection.py  human_behavior.py  manager.py
src/znany_lekarz_scheduler/config/: loader.py  models.py
src/znany_lekarz_scheduler/monitor/: scheduler.py  session.py  state_manager.py
src/znany_lekarz_scheduler/notifier/: apprise_notifier.py  base.py  formatter.py
src/znany_lekarz_scheduler/scraper/: doctor_page.py  login.py  slots_parser.py
src/znany_lekarz_scheduler/utils/: delays.py  logger.py  rate_limiter.py
tests/: test_apprise_notifier.py  test_e2e.py  test_formatter.py  test_scheduler.py  test_slots_parser.py  test_state_manager.py
