[project]
name = "znany-lekarz-scheduler"
version = "0.1.0"
description = "Monitor dostepnosci terminow na znany lekarz.pl"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.8",
    "apscheduler>=3.10",
    "mypy>=1.11",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "structlog>=25.5.0",
]

[project.scripts]
znany-lekarz = "znany_lekarz_scheduler.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/znany_lekarz_scheduler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
